--- a/templates/ergebnis.html
+++ b/templates/ergebnis.html
@@ -26,34 +26,82 @@
         <h4>durchschnittliche Wortlänge</h4>
         <table>
             <tr>
+                <th>Teil d. Korpus</th>
                 <th>Ø Wortlänge</th>
                 <th>Modus</th>
                 <th>Median</th>
                 <th>Varianz</th>
             </tr>
             <tr>
+                <td class="tablebold">Gesamt</td>
                 <td>13.4 Zeichen</td>
                 <td>16 Zeichen</td>
                 <td>14.5 Zeichen</td>
                 <td>2.96 Zeichen</td>
             </tr>
+            <tr>
+                <td class="tablebold">Abstracts</td>
+                <td>13.4 Zeichen</td>
+                <td>16 Zeichen</td>
+                <td>14.5 Zeichen</td>
+                <td>2.96 Zeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 1. Grades</td>
+                <td>13.4 Zeichen</td>
+                <td>16 Zeichen</td>
+                <td>14.5 Zeichen</td>
+                <td>2.96 Zeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 2. Grades</td>
+                <td>13.4 Zeichen</td>
+                <td>16 Zeichen</td>
+                <td>14.5 Zeichen</td>
+                <td>2.96 Zeichen</td>
+            </tr>
+
         </table>
     </div>
     <div class="col-lg-6 result">
         <h4>durchschnittliche Wortlänge</h4>
         <table>
             <tr>
+                <th>Teil d. Korpus</th>
                 <th>Ø Wortlänge</th>
                 <th>Modus</th>
                 <th>Median</th>
                 <th>Varianz</th>
             </tr>
             <tr>
-                <td>7.3 Zeichen</td>
-                <td>7 Zeichen</td>
-                <td>9 Zeichen</td>
-                <td>4.3 Zeichen</td>
+                <td class="tablebold">Gesamt</td>
+                <td>13.4 Zeichen</td>
+                <td>16 Zeichen</td>
+                <td>14.5 Zeichen</td>
+                <td>2.96 Zeichen</td>
             </tr>
+            <tr>
+                <td class="tablebold">Abstracts</td>
+                <td>13.4 Zeichen</td>
+                <td>16 Zeichen</td>
+                <td>14.5 Zeichen</td>
+                <td>2.96 Zeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 1. Grades</td>
+                <td>13.4 Zeichen</td>
+                <td>16 Zeichen</td>
+                <td>14.5 Zeichen</td>
+                <td>2.96 Zeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 2. Grades</td>
+                <td>13.4 Zeichen</td>
+                <td>16 Zeichen</td>
+                <td>14.5 Zeichen</td>
+                <td>2.96 Zeichen</td>
+            </tr>
+
         </table>
     </div>
 
@@ -62,12 +110,35 @@
         <h4>durchschnittliche Satzlänge</h4>
         <table>
             <tr>
+                <th>Teil d. Korpus</th>
                 <th>Ø Satzlänge</th>
                 <th>Modus</th>
                 <th>Median</th>
                 <th>Varianz</th>
             </tr>
             <tr>
+                <td class="tablebold">Gesamtkorpus</td>
+                <td>7.3 Wörter</td>
+                <td>7 Wörter</td>
+                <td>9 Wörter</td>
+                <td>4.3 Wörter</td>
+            </tr>
+            <tr>
+                <td class="tablebold">Abstracts</td>
+                <td>7.3 Wörter</td>
+                <td>7 Wörter</td>
+                <td>9 Wörter</td>
+                <td>4.3 Wörter</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 1. Grades</td>
+                <td>7.3 Wörter</td>
+                <td>7 Wörter</td>
+                <td>9 Wörter</td>
+                <td>4.3 Wörter</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 2. Grades</td>
                 <td>7.3 Wörter</td>
                 <td>7 Wörter</td>
                 <td>9 Wörter</td>
@@ -79,12 +150,35 @@
         <h4>durchschnittliche Satzlänge</h4>
         <table>
             <tr>
+                <th>Teil d. Korpus</th>
                 <th>Ø Satzlänge</th>
                 <th>Modus</th>
                 <th>Median</th>
                 <th>Varianz</th>
             </tr>
             <tr>
+                <td class="tablebold">Gesamtkorpus</td>
+                <td>8.1 Wörter</td>
+                <td>7 Wörter</td>
+                <td>9 Wörter</td>
+                <td>4.3 Wörter</td>
+            </tr>
+            <tr>
+                <td class="tablebold">Abstracts</td>
+                <td>8.1 Wörter</td>
+                <td>7 Wörter</td>
+                <td>9 Wörter</td>
+                <td>4.3 Wörter</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 1. Grades</td>
+                <td>8.1 Wörter</td>
+                <td>7 Wörter</td>
+                <td>9 Wörter</td>
+                <td>4.3 Wörter</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 2. Grades</td>
                 <td>8.1 Wörter</td>
                 <td>7 Wörter</td>
                 <td>9 Wörter</td>
@@ -93,23 +187,13 @@
         </table>
     </div>
 
-    <!--Type-Token Ratio -->
-    <div class="col-lg-6 result">
-        <h4>Größe/Dichte des Wortschatzes - Type Token Ratio (TTR)</h4>
-        <p>Die TTR Ihres Korpus beträgt: </p>
-        <p class="bordered">0.89</p>
-    </div>
-    <div class="col-lg-6 result">
-        <h4>Größe/Dichte des Wortschatzes - Type Token Ratio (TTR)</h4>
-        <p>Die TTR Ihres Korpus beträgt: </p>
-        <p class="bordered">0.54</p>
-    </div>
 
     <!-- Anzahl der Satzzeichen -->
     <div class="col-lg-6 result">
         <h4>Anzahl der Satzzeichen</h4>
         <table>
             <tr>
+                <th>Teil d. Korpus</th>
                 <th>Absolut</th>
                 <th>Ø Satzzeichen pro Paper</th>
                 <th>Modus</th>
@@ -117,6 +201,31 @@
                 <th>Varianz</th>
             </tr>
             <tr>
+                <td class="tablebold">Gesamtkorpus</td>
+                <td>132.434 Satzzeichen</td>
+                <td>321.6 Satzzeichen</td>
+                <td>350 Satzzeichen</td>
+                <td>354 Satzzeichen</td>
+                <td>5.89 Satzzeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">Abstracts</td>
+                <td>132.434 Satzzeichen</td>
+                <td>321.6 Satzzeichen</td>
+                <td>350 Satzzeichen</td>
+                <td>354 Satzzeichen</td>
+                <td>5.89 Satzzeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 1. Grades</td>
+                <td>132.434 Satzzeichen</td>
+                <td>321.6 Satzzeichen</td>
+                <td>350 Satzzeichen</td>
+                <td>354 Satzzeichen</td>
+                <td>5.89 Satzzeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 2. Grades</td>
                 <td>132.434 Satzzeichen</td>
                 <td>321.6 Satzzeichen</td>
                 <td>350 Satzzeichen</td>
@@ -129,6 +238,7 @@
         <h4>Anzahl der Satzzeichen</h4>
         <table>
             <tr>
+                <th>Teil d. Korpus</th>
                 <th>Absolut</th>
                 <th>Ø Satzzeichen pro Paper</th>
                 <th>Modus</th>
@@ -136,6 +246,31 @@
                 <th>Varianz</th>
             </tr>
             <tr>
+                <td class="tablebold">Gesamtkorpus</td>
+                <td>132.434 Satzzeichen</td>
+                <td>321.6 Satzzeichen</td>
+                <td>350 Satzzeichen</td>
+                <td>354 Satzzeichen</td>
+                <td>5.89 Satzzeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">Abstracts</td>
+                <td>132.434 Satzzeichen</td>
+                <td>321.6 Satzzeichen</td>
+                <td>350 Satzzeichen</td>
+                <td>354 Satzzeichen</td>
+                <td>5.89 Satzzeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 1. Grades</td>
+                <td>132.434 Satzzeichen</td>
+                <td>321.6 Satzzeichen</td>
+                <td>350 Satzzeichen</td>
+                <td>354 Satzzeichen</td>
+                <td>5.89 Satzzeichen</td>
+            </tr>
+            <tr>
+                <td class="tablebold">ÜS 2. Grades</td>
                 <td>132.434 Satzzeichen</td>
                 <td>321.6 Satzzeichen</td>
                 <td>350 Satzzeichen</td>
