--- a/templates/ergebnis.html
+++ b/templates/ergebnis.html
@@ -5,11 +5,11 @@
     <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">Ergebnis </h1>
-        <p>Im Folgenden sehen Sie Analyseauswertung Ihrer gewählten Korpora.</p>
+        <h3>Analyseauswertung der gewählten Korpora:</h3>
     </div>
 
     <div class="col-lg-12">
-        <h3>Basic Metrics</h3>
+        <h4>Basic Metrics</h4>
     </div>
     <div class="col-lg-6">
         <h4>Die häufigsten Wörter aus Korpus ...</h4>
@@ -22,8 +22,8 @@
     </div>
 
     <!-- durchschnittliche Wortlänge -->
-    <div class="col-lg-6 result">
-        <h4>durchschnittliche Wortlänge</h4>
+    <div class="col-lg-6 result table-responsive text-nowrap">
+        <h4>Durchschnittliche Wortlänge</h4>
         <table>
             <tr>
                 <th>Teil d. Korpus</th>
@@ -47,14 +47,14 @@
                 <td>2.96 Zeichen</td>
             </tr>
             <tr>
-                <td class="tablebold">ÜS 1. Grades</td>
+                <td class="tablebold">Überschrift 1. Grades</td>
                 <td>13.4 Zeichen</td>
                 <td>16 Zeichen</td>
                 <td>14.5 Zeichen</td>
                 <td>2.96 Zeichen</td>
             </tr>
             <tr>
-                <td class="tablebold">ÜS 2. Grades</td>
+                <td class="tablebold">Überschrift 2. Grades</td>
                 <td>13.4 Zeichen</td>
                 <td>16 Zeichen</td>
                 <td>14.5 Zeichen</td>
@@ -63,8 +63,9 @@
 
         </table>
     </div>
-    <div class="col-lg-6 result">
-        <h4>durchschnittliche Wortlänge</h4>
+
+    <div class="col-lg-6 result table-responsive text-nowrap">
+        <h4>Durchschnittliche Wortlänge</h4>
         <table>
             <tr>
                 <th>Teil d. Korpus</th>
@@ -88,14 +89,14 @@
                 <td>2.96 Zeichen</td>
             </tr>
             <tr>
-                <td class="tablebold">ÜS 1. Grades</td>
+                <td class="tablebold">Überschrift 1. Grades</td>
                 <td>13.4 Zeichen</td>
                 <td>16 Zeichen</td>
                 <td>14.5 Zeichen</td>
                 <td>2.96 Zeichen</td>
             </tr>
             <tr>
-                <td class="tablebold">ÜS 2. Grades</td>
+                <td class="tablebold">Überschrift 2. Grades</td>
                 <td>13.4 Zeichen</td>
                 <td>16 Zeichen</td>
                 <td>14.5 Zeichen</td>
@@ -106,8 +107,8 @@
     </div>
 
     <!-- durchschnittliche Satzlänge -->
-    <div class="col-lg-6 result">
-        <h4>durchschnittliche Satzlänge</h4>
+    <div class="col-lg-6 result table-responsive text-nowrap">
+        <h4>Durchschnittliche Satzlänge</h4>
         <table>
             <tr>
                 <th>Teil d. Korpus</th>
@@ -146,8 +147,9 @@
             </tr>
         </table>
     </div>
-    <div class="col-lg-6 result">
-        <h4>durchschnittliche Satzlänge</h4>
+
+    <div class="col-lg-6 result table-responsive text-nowrap">
+        <h4>Durchschnittliche Satzlänge</h4>
         <table>
             <tr>
                 <th>Teil d. Korpus</th>
@@ -189,7 +191,7 @@
 
 
     <!-- Anzahl der Satzzeichen -->
-    <div class="col-lg-6 result">
+    <div class="col-lg-6 result table-responsive text-nowrap">
         <h4>Anzahl der Satzzeichen</h4>
         <table>
             <tr>
@@ -234,7 +236,7 @@
             </tr>
         </table>
     </div>
-    <div class="col-lg-6 result">
+    <div class="col-lg-6 result table-responsive text-nowrap">
         <h4>Anzahl der Satzzeichen</h4>
         <table>
             <tr>
@@ -283,31 +285,31 @@
     <!--Zeichenanzahl -->
     <div class="col-lg-6 result">
         <h4>Zeichenanzahl</h4>
-        <p>Die absolute Zeichenanzahl Ihres Korpus beträgt: </p>
+        <p>Die absolute Anzahl des Korpus beträgt: </p>
         <p class="bordered">1.008.854 Zeichen</p>
     </div>
     <div class="col-lg-6 result">
         <h4>Zeichenanzahl</h4>
-        <p>Die absolute Zeichenanzahl Ihres Korpus beträgt: </p>
+        <p>Die absolute Anzahl des Korpus beträgt: </p>
         <p class="bordered">5.985.349.653 Zeichen</p>
     </div>
 
     <!--Wortanzahl -->
     <div class="col-lg-6 result">
         <h4>Wortanzahl</h4>
-        <p>Die absolute Wortanzahl Ihres Korpus beträgt: </p>
+        <p>Die absolute Anzahl des Korpus beträgt: </p>
         <p class="bordered">648.986 Wörter</p>
     </div>
     <div class="col-lg-6 result">
         <h4>Wortanzahl</h4>
-        <p>Die absolute Wortanzahl Ihres Korpus beträgt: </p>
+        <p>Die absolute Anzahl des Korpus beträgt: </p>
         <p class="bordered">209.865 Wörter</p>
     </div>
 
     <!--Most Present Words-->
     <div class="col-lg-6 result">
         <h4>Most Present Words</h4>
-        <p>Die Top 10 Most Present Words nach Rang sortiert.</p>
+        <p>Die Top 10 der meist verwendeten Wörter(nach Rang sortiert) :</p>
         <ul>
             <li>hello</li>
             <li>hi</li>
@@ -323,7 +325,7 @@
     </div>
     <div class="col-lg-6 result">
         <h4>Most Present Words</h4>
-        <p>Die Top 10 Most Present Words nach Rang sortiert.</p>
+        <p>Die Top 10 der meist verwendeten Wörter(nach Rang sortiert) :</p>
         <ul>
             <li>hello</li>
             <li>hi</li>
@@ -360,9 +362,9 @@
                 </span>
             </form>-->
 
-
+            <form>
               <a href="{% url 'download' %}" download><span class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-download"></i> Download files</span></a>
-
+            </form>
     </div>
         <div class="panel-body">
      </div>
